--- a/chrome-extension/src/index.scss
+++ b/chrome-extension/src/index.scss
@@ -1,12 +1,12 @@
 
-.gc-tool{
+.gg-tool{
     position: absolute;
     left: 10px;
     bottom: 40px;
     z-index: 9999;
 }
 
-.gc-quests{
+.gg-quests{
     position: absolute;
     left: 60px;
     bottom: 40px;
@@ -15,10 +15,10 @@
     padding: 10px;
 }
 
-.persoToolbar a.gc-icon{
+.persoToolbar a.gg-icon{
     font-size: 1rem;
 }
 
-.gc-hide{
+.gg-hide{
     display: none;
 }
