--- a/chrome-extension/src/index.scss
+++ b/chrome-extension/src/index.scss
@@ -15,8 +15,15 @@ $ionicons-font-path: 'http://code.ionicframework.com/ionicons/2.0.1/fonts';
         display: flex;
         flex-direction: row;
         height: 45px;
-        & > *{
+        & > a{
             min-width: 45px;
+            background-color: #343b43;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            &.selected{
+                background-color: #d33016;
+            }
         }
     }
 }
