--- a/chrome-extension/src/index.scss
+++ b/chrome-extension/src/index.scss
@@ -30,22 +30,12 @@ $ionicons-font-path: 'http://code.ionicframework.com/ionicons/2.0.1/fonts';
 
 .gg-quests{
     position: absolute;
-    left: 80px;
-    bottom: 15px;
+    right: 10px;
+    top: 170px;
     z-index: 99999;
     background-color: #ffffff;
     padding: 15px;
 
-    &:before{
-        content: '';
-        display: block;
-        position: absolute;
-        bottom: 0;
-        left: -20px;
-        border-width: 20px 20px 20px 0px;
-        border-style: solid;
-        border-color: transparent white transparent transparent;
-    }
 }
 
 .persoToolbar a.gg-icon{
